updating backend service and minor changes in front end